# llp_db

./: CMakeLists.txt  Makefile  client  filesys  parser.py  server  spec.pb-c.c  spec.pb-c.h  spec.proto  test
client_dir/: client.c  lex.yy.c  parser.tab.c  parser.tab.h  serealizator.c  serealizator.h
client_dir/lexer/: lexer.l
client_dir/parser/: parser.y
client_dir/structures/: structures.c  structures.h
db/include/file_manager/: document.h  op_status.h  page.h
db/include/query_manager/: condition.h  query.h
db/include/schema_manager/: element.h  schema.h
db/include/tests/: test.h
db/include/utils/: iterator.h  list.h
db/src/: main.c
db/src/file_manager/: document.c  page.c
db/src/query_manager/: condition.c  query.c
db/src/schema_manager/: element.c  schema.c
db/src/tests/: test.c
db/src/utils/: iterator.c  list.c
server_dir/: deserealizator.c  deserealizator.h  server.c
